# JARVIS

./: .gitignore  DRAWING_WORKFLOW.txt  END.md  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  _codeql_detected_source_root  package.json  ux.md
hardware/: .coverage  .env.example  README.md  __init__.py  app.py  architecture_plan.md  build.sh  cli.py  main.cpp  pyproject.toml  styles.css  styles.tcss  test_e2e.py
hardware/JARVIS/: .env.example  CMakeLists.txt  DRAWING_MODE_SUMMARY.md  HAND_DETECTION_NOTES.md  HAND_DETECTION_QUICKSTART.txt  IMPLEMENTATION_SUMMARY.md  download_hand_model.sh  test_hand_prod.sh
hardware/JARVIS/_codeql_build_dir/: CTestTestfile.cmake  JARVIS  compile_commands.json  jarvis_tests  jarvis_tests[1]_include.cmake  jarvis_tests[1]_tests.cmake
hardware/JARVIS/docs/: DRAWING_MODE.md  DRAWING_WORKFLOW_ARCHITECT.md  ENTERPRISE_ARCHITECT_SYSTEM.md  ENTERPRISE_GESTURE_DETECTION.md  HAND_DETECTION_IMPROVEMENTS.md  HAND_DETECTION_PRODUCTION.md  HAND_RECOGNITION.md  IMX500_README.md  PRODUCTION_DETECTOR_USAGE.md  PRODUCTION_HAND_DETECTION.md  QUICK_START_HAND.md  README.md
hardware/JARVIS/include/: camera.hpp  draw_ticker.hpp  hand_detector.hpp  hand_detector_config.hpp  hand_detector_imx500.hpp  hand_detector_mediapipe.hpp  hand_detector_production.hpp  hand_detector_simd.hpp  hand_detector_tflite.hpp  http_client.hpp  pipeline.hpp  renderer.hpp  sketch_pad.hpp
hardware/JARVIS/lib/: ai-model.cpp  utils.cpp
hardware/JARVIS/scripts/: install_tflite.sh  install_tflite_quick.sh  run_imx500.sh  test_hand_prod.sh
hardware/JARVIS/src/: camera.cpp  crypto.cpp  draw_ticker.cpp  hand_detector.cpp  hand_detector_config.cpp  hand_detector_imx500.cpp  hand_detector_mediapipe.cpp  hand_detector_production.cpp  hand_detector_simd.cpp  hand_detector_tflite.cpp  http_client.cpp  main.cpp  pipeline.cpp  sketch_pad.cpp
hardware/JARVIS/tests/: test_hand_detector.cpp  test_hand_detector_production.cpp  test_improvements.cpp  test_sketch_pad.cpp
hardware/app_logging/: logger.py
hardware/config/: __init__.py  config.py  gestures.json  sync_config.py
hardware/core/: __init__.py  base_tool.py  chat_handler.py  data_utils.py  orchestration.py  tool_execution.py  tool_registry.py
hardware/core/agents/: __init__.py  base_agent.py  blueprint_agent.py  coder_agent.py  critic_agent.py  memory_agent.py  orchestrator_agent.py  planner_agent.py  research_agent.py
hardware/core/audio_input/: audio_capture.py  audio_input_manager.py  stt_base.py  stt_factory.py  vosk_engine.py
hardware/core/blueprint/: __init__.py  engine.py  fixer.py  framebuffer_tui.py  history.py  parser.py  renderer.py  scene_graph.py  selection.py  transforms.py
hardware/core/blueprint_gesture/: __init__.py  gesture_commands.py  interaction_modes.py  spatial_mapping.py
hardware/core/code/: __init__.py  engine.py
hardware/core/external_tools/: __init__.py  connector.py
hardware/core/llm/: __init__.py  gemma_wrapper.py  google_ai_wrapper.py  groq_wrapper.py  llama_wrapper.py  moonshot_wrapper.py  provider_factory.py
hardware/core/memory/: __init__.py  conversation_memory.py  episodic_memory.py  memory_manager.py  memory_store.py
hardware/core/network/: http_client.py
hardware/core/security/: __init__.py  secure_storage.py  security_manager.py
hardware/core/sync/: __init__.py  async_bridge.py  config_manager.py  conflict_resolver.py  offline_queue.py  (+2 more)
hardware/doc/: AI_MODELS_FOR_BLUEPRINTS.md  AUDIO_INPUT_VOSK_SETUP.md  COMMUNICATION_PROTOCOL.md  LANGUAGES_AND_LIBRARIES.md  LOCAL_JSON_MODELS_FOR_BLUEPRINT_GEOMETRY.md  PLATFORM.md  REMOTE_PC_CONTROL.md  RPI5_LOCAL_JSON_MODELS_GUIDE.md
hardware/plans/: blueprint_engine_implementation_plan.md  chat_handler_refactor_minimal.md  fix3_create_blueprint_security_plan.md  fix7_execute_code_tool_unknown_verdict_plan.md  fix8_shell_tool_hardening_plan.md  fix9_pytest_import_path_plan.md  hand_gesture_detection_plan.md  js_analyzer_normalization_fix_plan.md  orchestration_routing_hybrid.md  structured_tool_results.md  tool_calling_improvements.md  tool_registry_duplicate_registration.md  tool_registry_versioning.md
hardware/src/: __init__.py  config.py
hardware/tests/: conftest.py  mock_llm.py  test_agent_methods.py  test_agents.py  test_audio_input_stt.py  test_blueprint_engine.py  test_blueprint_parser.py  test_blueprint_sync_signature.py  test_chat_handler.py  test_code_engine.py  test_config.py  test_connection_info_tool.py  test_conversation_memory.py  test_create_blueprint_tool_security.py  test_data_tools.py  test_data_utils.py  test_drawing_canvas.py  test_drawing_grid.py  test_drawing_primitives.py  test_drawing_tools.py  test_episodic_memory.py  test_execute_code_tool_js_security.py  test_execute_code_tool_python_file_invocation.py  test_execute_code_tool_unknown_verdict.py  test_external_connector.py  test_file_tools.py  test_gemma_wrapper.py  test_gesture_commands.py  test_gesture_control_tool.py  test_gesture_events.py  test_gesture_recognizer.py  test_google_ai_wrapper.py  test_groq_wrapper.py  test_history.py  test_http_client.py  test_interaction_modes.py  test_memory_agent.py  test_memory_manager.py  test_memory_store.py  test_orchestration_router.py  (+24 more)
hardware/tools/: __init__.py  apply_theme_tool.py  blueprint_edit_tool.py  blueprint_export_tool.py  blueprint_render_tool.py  blueprint_transform_tool.py  camera_tool.py  configure_llm_tool.py  connection_info_tool.py  create_blueprint_tool.py  delete_blueprint_tool.py  edit_profile_tool.py  execute_code_tool.py  gesture_control_tool.py  gesture_mode_tool.py  help_tool.py  import_blueprint_tool.py  list_blueprints_tool.py  list_data_tool.py  list_devices_tool.py  live_assistance_tool.py  load_blueprint_tool.py  memory_tools.py  quit_tool.py  read_file_tool.py  register_device_tool.py  resolve_conflict_tool.py  run_script_tool.py  save_profile_tool.py  search_data_tool.py  send_blueprint_tool.py  shell_tool.py  smart_mode_tool.py  summarize_tool.py  sync_config_tool.py  sync_queue_tool.py  sync_status_tool.py  sync_tool.py  update_blueprint_tool.py  view_stats_tool.py  (+2 more)
(+342 files in other folders)
