[project]
name = "hardware"
version = "0.1.0"
description = "JARVIS hardware part"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.3.0",
    "aiohttp>=3.9.0",
    "jinja2>=3.0.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
    "ruff>=0.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E501", "E402", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
