[project]
name = "hardware"
version = "0.2.0"
description = "JARVIS hardware part - AI-powered chat agent with tool calling"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # LLM Providers
    "ollama>=0.4.0",
    "google-generativeai>=0.8.0",
    # Async & Web
    "aiohttp>=3.11.0",
    "aiofiles>=24.1.0",
    # TTS Engines
    "pyttsx3>=2.98",
    "gTTS>=2.5.0",
    "pygame>=2.6.0",
    # Configuration & Environment
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Security
    "cryptography>=43.0.0",
    # Math & Vector Operations
    "numpy>=2.0.0",
    # Templating & Utils
    "jinja2>=3.1.0",
    # Performance
    "orjson>=3.10.0",
]

[project.scripts]
jarvis = "app:main"

# For editable install to work, the package is just this directory
# Running tests should use: python -m pytest
# Running the app: python -m app

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E501", "E402", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
